--- a/config/prow/testgrid/testgrid.yaml
+++ b/config/prow/testgrid/testgrid.yaml
@@ -975,14 +975,50 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
     num_failures_to_alert: 3
+  - name: serving-continuous
+    test_group_name: ci-knative-serving-continuous-0.10-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: serving-dot-release
+    test_group_name: ci-knative-serving-dot-release-0.10-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
   - name: eventing
     test_group_name: ci-knative-eventing-0.10-continuous
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
     num_failures_to_alert: 3
+  - name: eventing-continuous
+    test_group_name: ci-knative-eventing-continuous-0.10-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: eventing-dot-release
+    test_group_name: ci-knative-eventing-dot-release-0.10-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
   - name: eventing-contrib
     test_group_name: ci-knative-eventing-contrib-0.10-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: eventing-contrib-continuous
+    test_group_name: ci-knative-eventing-contrib-continuous-0.10-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: eventing-contrib-dot-release
+    test_group_name: ci-knative-eventing-contrib-dot-release-0.10-continuous
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
@@ -995,8 +1031,32 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
     num_failures_to_alert: 3
+  - name: serving-continuous
+    test_group_name: ci-knative-serving-continuous-0.11-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: serving-dot-release
+    test_group_name: ci-knative-serving-dot-release-0.11-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
   - name: client
     test_group_name: ci-knative-client-0.11-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: client-continuous
+    test_group_name: ci-knative-client-continuous-0.11-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: client-dot-release
+    test_group_name: ci-knative-client-dot-release-0.11-continuous
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
@@ -1007,8 +1067,32 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
     num_failures_to_alert: 3
+  - name: eventing-continuous
+    test_group_name: ci-knative-eventing-continuous-0.11-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: eventing-dot-release
+    test_group_name: ci-knative-eventing-dot-release-0.11-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
   - name: eventing-contrib
     test_group_name: ci-knative-eventing-contrib-0.11-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: eventing-contrib-continuous
+    test_group_name: ci-knative-eventing-contrib-continuous-0.11-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: eventing-contrib-dot-release
+    test_group_name: ci-knative-eventing-contrib-dot-release-0.11-continuous
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
@@ -1019,8 +1103,32 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
     num_failures_to_alert: 3
+  - name: serving-operator-continuous
+    test_group_name: ci-knative-serving-operator-continuous-0.11-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: serving-operator-dot-release
+    test_group_name: ci-knative-serving-operator-dot-release-0.11-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
   - name: eventing-operator
     test_group_name: ci-knative-eventing-operator-0.11-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: eventing-operator-continuous
+    test_group_name: ci-knative-eventing-operator-continuous-0.11-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: eventing-operator-dot-release
+    test_group_name: ci-knative-eventing-operator-dot-release-0.11-continuous
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
@@ -1033,8 +1141,32 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
     num_failures_to_alert: 3
+  - name: serving-continuous
+    test_group_name: ci-knative-serving-continuous-0.12-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: serving-dot-release
+    test_group_name: ci-knative-serving-dot-release-0.12-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
   - name: client
     test_group_name: ci-knative-client-0.12-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: client-continuous
+    test_group_name: ci-knative-client-continuous-0.12-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: client-dot-release
+    test_group_name: ci-knative-client-dot-release-0.12-continuous
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
@@ -1045,8 +1177,32 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
     num_failures_to_alert: 3
+  - name: eventing-continuous
+    test_group_name: ci-knative-eventing-continuous-0.12-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: eventing-dot-release
+    test_group_name: ci-knative-eventing-dot-release-0.12-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
   - name: eventing-contrib
     test_group_name: ci-knative-eventing-contrib-0.12-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: eventing-contrib-continuous
+    test_group_name: ci-knative-eventing-contrib-continuous-0.12-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: eventing-contrib-dot-release
+    test_group_name: ci-knative-eventing-contrib-dot-release-0.12-continuous
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
@@ -1057,8 +1213,32 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
     num_failures_to_alert: 3
+  - name: serving-operator-continuous
+    test_group_name: ci-knative-serving-operator-continuous-0.12-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: serving-operator-dot-release
+    test_group_name: ci-knative-serving-operator-dot-release-0.12-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
   - name: eventing-operator
     test_group_name: ci-knative-eventing-operator-0.12-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: eventing-operator-continuous
+    test_group_name: ci-knative-eventing-operator-continuous-0.12-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: eventing-operator-dot-release
+    test_group_name: ci-knative-eventing-operator-dot-release-0.12-continuous
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
@@ -1071,8 +1251,20 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
     num_failures_to_alert: 3
+  - name: serving-continuous
+    test_group_name: ci-knative-serving-continuous-0.13-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
   - name: client
     test_group_name: ci-knative-client-0.13-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: client-continuous
+    test_group_name: ci-knative-client-continuous-0.13-continuous
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
@@ -1083,8 +1275,20 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
     num_failures_to_alert: 3
+  - name: eventing-continuous
+    test_group_name: ci-knative-eventing-continuous-0.13-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
   - name: eventing-contrib
     test_group_name: ci-knative-eventing-contrib-0.13-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: eventing-contrib-continuous
+    test_group_name: ci-knative-eventing-contrib-continuous-0.13-continuous
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
@@ -1095,8 +1299,20 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
     num_failures_to_alert: 3
+  - name: serving-operator-continuous
+    test_group_name: ci-knative-serving-operator-continuous-0.13-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
   - name: eventing-operator
     test_group_name: ci-knative-eventing-operator-0.13-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: eventing-operator-continuous
+    test_group_name: ci-knative-eventing-operator-continuous-0.13-continuous
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
@@ -1109,10 +1325,28 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
     num_failures_to_alert: 3
+  - name: knative-gcp-continuous
+    test_group_name: ci-google-knative-gcp-continuous-0.12-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: knative-gcp-dot-release
+    test_group_name: ci-google-knative-gcp-dot-release-0.12-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
 - name: google-0.13
   dashboard_tab:
   - name: knative-gcp
     test_group_name: ci-google-knative-gcp-0.13-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: knative-gcp-continuous
+    test_group_name: ci-google-knative-gcp-continuous-0.13-continuous
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
