--- a/config/prow-staging/Makefile
+++ b/config/prow-staging/Makefile
@@ -14,6 +14,7 @@
 
 # Staging cluster configuration
 
+ENVIRONMENT               := prow-staging
 PROJECT                   := knative-tests-staging
 PROW_GCS                  := knative-prow-staging
 PROW_HOST                 := https://prow-staging.knative.dev
