Add net-contour e2e testing

--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -294,7 +294,7 @@ presubmits:
       dot-dev: true
     - unit-tests: true
       dot-dev: true
-    - integration-tests: false
+    - integration-tests: true
       dot-dev: true
     - go-coverage: true
       dot-dev: true
