move Makefile shared to images

--- a/images/backups/Makefile
+++ b/images/backups/Makefile
@@ -13,4 +13,4 @@
 # limitations under the License.
 
 IMAGE_NAME = backups
-include ../../pkg/Makefile.simple-image
+include ../Makefile.simple-image
