--- a/images/clear-test-infra-alerts/Makefile
+++ b/images/clear-test-infra-alerts/Makefile
@@ -13,4 +13,4 @@
 # limitations under the License.
 
 IMAGE_NAME = monitoring/clear-alerts
-include ../../pkg/Makefile.simple-image
+include ../Makefile.simple-image
