--- a/images/prow-config-updater/Makefile
+++ b/images/prow-config-updater/Makefile
@@ -12,21 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM golang:1.13
-LABEL maintainer "Chao Dai <chaodai@google.com>"
-RUN apt-get update
+IMAGE_NAME = prow-config-updater
+include ../Makefile.simple-image
 
-ENV TEMP_REPO_DIR /go/src/knative.dev/test-infra
-ENV TOOL_NAME prow-auto-bumper
-
-# Temporarily add test-infra to the image to build custom tools
-ADD . $TEMP_REPO_DIR
-
-# Build Prow auto bumper tool in the container
-RUN make -C $TEMP_REPO_DIR/tools/$TOOL_NAME/
-RUN cp $TEMP_REPO_DIR/tools/$TOOL_NAME/$TOOL_NAME /$TOOL_NAME
-
-# Remove test-infra from the container
-RUN rm -fr $TEMP_REPO_DIR
-
-ENTRYPOINT ["/prow-auto-bumper"]
