--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -322,17 +322,7 @@ presubmits:
       dot-dev: true
     - unit-tests: true
       dot-dev: true
-    - integration-tests: false
-      dot-dev: true
-    - go-coverage: true
-      dot-dev: true
-
-  knative/net-http01:
-    - build-tests: true
-      dot-dev: true
-    - unit-tests: true
-      dot-dev: true
-    - integration-tests: false
+    - integration-tests: true
       dot-dev: true
     - go-coverage: true
       dot-dev: true
@@ -913,20 +903,6 @@ periodics:
       - ORG_NAME=google
 
   knative/net-contour:
-    - continuous: true
-      dot-dev: true
-      go113: true
-    - nightly: true
-      dot-dev: true
-      go113: true
-    - dot-release: true
-      dot-dev: true
-      go113: true
-    - auto-release: true
-      dot-dev: true
-      go113: true
-
-  knative/net-http01:
     - continuous: true
       dot-dev: true
       go113: true
