--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -253,6 +253,8 @@ presubmits:
       dot-dev: true
     - integration-tests: true
       dot-dev: true
+    - go-coverage: true
+      dot-dev: true
     - custom-test: check-config
       dot-dev: true
       command:
