--- a/config/prow/testgrid/testgrid.yaml
+++ b/config/prow/testgrid/testgrid.yaml
@@ -215,6 +215,9 @@ test_groups:
 - name: ci-knative-test-infra-continuous
   gcs_prefix: knative-prow/logs/ci-knative-test-infra-continuous
   alert_stale_results_hours: 3
+- name: ci-knative-test-infra-test-coverage
+  gcs_prefix: knative-prow/logs/ci-knative-test-infra-go-coverage
+  short_text_metric: "coverage"
 - name: ci-knative-serving-operator-continuous
   gcs_prefix: knative-prow/logs/ci-knative-serving-operator-continuous
   alert_stale_results_hours: 3
@@ -793,6 +796,9 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "prime-engprod-sea@google.com"
     num_failures_to_alert: 3
+  - name: coverage
+    test_group_name: ci-knative-test-infra-test-coverage
+    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
 - name: serving-operator
   dashboard_tab:
   - name: continuous
