--- a/config/prow/jobs/config.yaml
+++ b/config/prow/jobs/config.yaml
@@ -9999,6 +9999,7 @@ postsubmits:
     decorate: true
     max_concurrency: 1
     run_if_changed: "^(config/(prow|prow-staging)/(cluster|core|jobs|testgrid)/.*.yaml)|(tools/config-generator/templates/(prow|prow-staging)/.*.yaml)$"
+    cluster: "prow-trusted"
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/prow-config-updater:latest
