Add another presubmit job for knative/net-istio using istio-latest

--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -338,6 +338,12 @@ presubmits:
       dot-dev: true
     - go-coverage: true
       dot-dev: true
+    - custom-test: latest
+      dot-dev: true
+      optional: true
+      args:
+      - "--run-test"
+      - "./test/e2e-tests.sh --istio-version latest"
 
   knative/net-kourier:
     - build-tests: true
